--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,17 +5,20 @@ spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
     username: root
-    password: 123456
-    url: jdbc:mysql://192.168.1.5/sell?characterEncoding=utf-8&useSSL=false
-#    url: jdbc:mysql://132.232.117.84/dbgirls?characterEncoding=utf-8&useSSL=false
+    password: abcdpl1230
+    url: jdbc:mysql://132.232.117.84/sell?characterEncoding=utf-8&useSSL=false
   jpa:
     show-sql: true
   jackson:
     default-property-inclusion: non_null
   freemarker:
     cache: false
-
+  redis:
+    host: 132.232.117.84
+    port: 6379
 
 wechat:
   mpAppId: wx8400dc20e725e7d3
   mpAppSecret: 23c32e1ddd96618605307b472062c3b5
+  openAppId: wx8400dc20e725e7d3
+  openAppSecret: 23c32e1ddd96618605307b472062c3b5
